# instascrape

./: .gitignore  Cargo.toml  LICENSE  README.md  user.txt
cli/: Cargo.toml
cli/src/: error.rs  main.rs  tests.rs
instascrape/: Cargo.toml
instascrape-cli/: Cargo.toml
instascrape-cli/src/: main.rs
instascrape/src/: lib.rs
src/: config.rs  error.rs  lib.rs  main.rs
tests/: scrape.rs
