[package]
name = "instascrape"
version = "0.1.2"
authors = ["jakbyte <jakbyte@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MIT"
publish = false

[dependencies]
env_logger = "0.7"
log = "0.4"
scraper = "0.11"
reqwest = { version = "0.10", features = ["blocking"] }
chrono = "0.4"
toml = "0.5"
serde = { version = "1", features = ["derive"] }