[package]
name = "instascrape"
version = "0.2.0"
authors = ["jakbyte <jakbyte@gmail.com>"]
edition = "2018"

readme = "README.md"
license = "MIT"
publish = false

[dependencies]
env_logger = "0.7"
log = "0.4"
scraper = "0.11"
chrono = "0.4"
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5"