[package]
name = "instascrape-cli"
version = "0.1.1"
authors = ["jakbyte <jakbyte@gmail.com>"]
edition = "2018"

homepage = "https://github.com/arcturus-robotics/instascrape"
repository = "https://github.com/arcturus-robotics/instascrape"

readme = "../README.md"
license = "MIT"

publish = false

[dependencies]
chrono = "0.4"
instascrape = { path = ".." }
reqwest = { version = "0.10", features = ["json"] }
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
